@@ -1,0 +1,24 @@
+test-directive-code
+===================
+
+.. toctree::
+
+   *
+
+
+Code blocks
+-----------
+
+.. code-block:: ruby
+   :linenos:
+
+       def ruby?
+           false
+       end
+
+
+Literal Includes
+----------------
+
+.. literalinclude:: literal.inc
+   :language: python
